test panel added to repo

--- a/panel.html
+++ b/panel.html
@@ -21,7 +21,7 @@
        ]
     </py-config>
     <div id="pyscript_app">
-      <py-script src="./test-dashboard.py"></py-script>
+      <py-script src="./test-panel.py"></py-script>
     </div>
   </body>
 </html>
